Components: Fix TileGrid cta text alignment for mobile

--- a/client/components/tile-grid/style.scss
+++ b/client/components/tile-grid/style.scss
@@ -142,8 +142,9 @@
 
 	@include breakpoint( "<480px" ) {
 		background: none;
+		text-align: left;
 		font-size: 16px;
-		line-height: 18px;
+		line-height: 1.2;
 		border: 0;
 		padding: 0;
 		text-transform: none;
